--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,9 @@
 remote_theme           : "mmistakes/minimal-mistakes"
+
+# Plugins (previously gems:)
+plugins:
+#  - jekyll-paginate
+#  - jekyll-sitemap
+#  - jekyll-gist
+#  - jekyll-feed
+  - jekyll-include-cache
